tests/ui/traits/const-traits/call-const-in-conditionally-const.stderr
error[E0277]: the trait bound `T: const Foo` is not satisfied
  --> $DIR/call-const-in-conditionally-const.rs:9:13
   |
LL |     const { T::foo() }
   |             ^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
